--- a/examples/nacl_shootout/good/2015.10.02.results/wcpcpy/Makefile
+++ b/examples/nacl_shootout/good/2015.10.02.results/wcpcpy/Makefile
@@ -1,13 +1,15 @@
 
-all: opt synth
+DEF_IN="{ %r15 %rdi %rsi }"
+LIVE_OUT="{ %rax }"
 
 opt:
-	time stoke debug verify --target target.s --rewrite optimize.s --testcases testcases --strategy ddec --def_in "{ %r15 %rdi %rsi }" --live_out "{ %rax }"
+	time stoke debug verify --target target.s --rewrite optimize.s --testcases testcases --strategy ddec --def_in $(DEF_IN) --live_out $(LIVE_OUT)
 
 synth:
-	time stoke debug verify --target target.s --rewrite synth.s --testcases testcases --strategy ddec --def_in "{ %r15 %rdi %rsi }" --live_out "{ %rax }"
+	time stoke debug verify --target target.s --rewrite synth.s --testcases testcases --strategy ddec --def_in $(DEF_IN) --live_out $(LIVE_OUT)
 
+opt_notc:
+	time stoke debug verify --target target.s --rewrite optimize.s --strategy ddec --def_in $(DEF_IN) --live_out $(LIVE_OUT)
 
-
-alt:
-	time stoke debug verify --target target.s --rewrite optimize.s --strategy ddec --live_out "{ %rax }"
+synth_notc:
+	time stoke debug verify --target target.s --rewrite synth.s --strategy ddec --def_in $(DEF_IN) --live_out $(LIVE_OUT)
