--- a/examples/nacl_shootout/good/optimize-newlib-wcpcpy/search.conf
+++ b/examples/nacl_shootout/good/optimize-newlib-wcpcpy/search.conf
@@ -228,7 +228,7 @@
 
 # Subset of testcase indices to use for training sets
 # --training_set { 0 1 ... 9 }
---training_set "{ 0 1 2 3 10 11 12 13 20 21 22 23 24 30 40 41 50 60 70 80 }"
+--training_set "{ 0 1 2 3 4 10 11 12 13 20 21 22 23 30 31 40 41 50 60 70 80 }"
 # Default: { 0 ... 9999 }
 
 # Subset of testcase indices to use for test sets
