fixing up feature-nacl branch

--- a/examples/nacl_shootout/good/optimize-newlib-strcpy/search.conf
+++ b/examples/nacl_shootout/good/optimize-newlib-strcpy/search.conf
@@ -290,7 +290,7 @@
 # --strategy (none|hold_out|formal|extension)
 # Default: none
 #--strategy hold_out
---strategy "hold_out,bounded"
+--strategy "hold_out"
 --bound 2
 --alias_strategy "string_antialias"
 
