--- a/examples/tutorial/search.conf
+++ b/examples/tutorial/search.conf
@@ -38,6 +38,7 @@
 --cycle_timeout 1000000 # Try 1m modifications before restarting
 
 --strategy "hold_out,bounded" # Verify results using a larger hold out testcase set
+--bound 32
 --nesting_penalty 5
 
 --cost "correctness + latency"
