add timeout to strcpy benchmark

--- a/examples/nacl_shootout/good/optimize-newlib-strcpy/Makefile
+++ b/examples/nacl_shootout/good/optimize-newlib-strcpy/Makefile
@@ -30,7 +30,7 @@ optbin: result.s
 	make replace
 
 benchmark: optbin
-	sel_ldr.py optbin
+	timeout 20m sel_ldr.py optbin
 
 pinkman:
 	./pinkman.sh
