--- a/examples/nacl_shootout/good/2015.10.02.results/wcschr/Makefile
+++ b/examples/nacl_shootout/good/2015.10.02.results/wcschr/Makefile
@@ -1,7 +1,7 @@
 
 DEF_IN="{ %r15 %rdi %rsi }"
 LIVE_OUT="{ %rax }"
-ARGS=--solver z3 --no_try_sign_extend --no_ddec_bv
+ARGS=--solver z3 --no_try_sign_extend --no_ddec_bv --test_set "{ 0 1 .. 20 }"
 
 opt:
 	time stoke debug verify --target target.s --rewrite optimize.s --testcases testcases --strategy ddec --max_jumps 4096 --def_in $(DEF_IN) --live_out $(LIVE_OUT) $(ARGS)
