wcscmp-syn works!

--- a/examples/nacl_shootout/good/2015.10.02.results/wcpcpy/Makefile
+++ b/examples/nacl_shootout/good/2015.10.02.results/wcpcpy/Makefile
@@ -1,7 +1,7 @@
 
 DEF_IN="{ %r15 %rdi %rsi }"
 LIVE_OUT="{ %rax }"
-ARGS=--solver z3 --no_ddec_bv
+ARGS=--solver z3 --no_ddec_bv --test_set "{ 0 .. 50 }"
 
 opt:
 	time stoke debug verify --target target.s --rewrite optimize.s --testcases testcases --strategy ddec --def_in $(DEF_IN) --live_out $(LIVE_OUT) $(ARGS)
