--- a/examples/nacl_shootout/good/2015.10.02.results/wmemset/Makefile
+++ b/examples/nacl_shootout/good/2015.10.02.results/wmemset/Makefile
@@ -1,7 +1,7 @@
 
 DEF_IN="{ %r15 %rdi %rsi %rdx }"
 LIVE_OUT="{ %rax }"
-ARGS=--solver z3 --test_set "{ 0 .. 50 }" --sound_nullspace
+ARGS=--solver z3 --test_set "{ 0 .. 50 }" --sound_nullspace --alias_strategy string
 
 opt:
 	time stoke debug verify --target target.s --rewrite optimize.s --testcases testcases --training_set "{ 1 .. 30 }" --strategy ddec --def_in $(DEF_IN) --live_out $(LIVE_OUT) $(ARGS)
