--- a/examples/nacl_shootout/good/2015.10.02.results/wcscpy/Makefile
+++ b/examples/nacl_shootout/good/2015.10.02.results/wcscpy/Makefile
@@ -1,7 +1,7 @@
 
 DEF_IN="{ %r15 %rdi %rsi }"
 LIVE_OUT="{ %rax }"
-ARGS=--solver z3
+ARGS=--solver z3 --test_set "{ 0 .. 50 }" --sound_nullspace --no_ddec_bv --alias_strategy string_antialias
 
 opt:
 	time stoke debug verify --target target.s --rewrite optimize.s --testcases testcases --strategy ddec --def_in $(DEF_IN) --live_out $(LIVE_OUT) $(ARGS)
