--- a/examples/nacl_shootout/good/2015.10.02.results/wcpcpy/Makefile
+++ b/examples/nacl_shootout/good/2015.10.02.results/wcpcpy/Makefile
@@ -9,8 +9,6 @@ opt:
 opt_debug:
 	gdb --args stoke_debug_verify --target target.s --rewrite optimize.s --testcases testcases --strategy ddec --def_in $(DEF_IN) --live_out $(LIVE_OUT) $(ARGS)
 
-
-
 synth:
 	time stoke debug verify --target target.s --rewrite synth.s --testcases testcases --strategy ddec --def_in $(DEF_IN) --live_out $(LIVE_OUT) $(ARGS)
 
@@ -19,3 +17,10 @@ opt_notc:
 
 synth_notc:
 	time stoke debug verify --target target.s --rewrite synth.s --strategy ddec --def_in $(DEF_IN) --live_out $(LIVE_OUT) $(ARGS)
+
+bounded_flat:
+	./bounded_flat.sh $(DEF_IN) $(LIVE_OUT)
+
+bounded_flat_syn:
+	./bounded_flat_syn.sh $(DEF_IN) $(LIVE_OUT)
+
