--- a/examples/nacl_shootout/good/optimize-newlib-strcpy/search.conf
+++ b/examples/nacl_shootout/good/optimize-newlib-strcpy/search.conf
@@ -228,11 +228,13 @@
 
 # Subset of testcase indices to use for training sets
 # --training_set { 0 1 ... 9 }
---training_set "{ 0 1 2 3 10 11 12 13 20 21 22 23 24 30 40 41 50 60 70 80 }"
+#--training_set "{ 0 1 2 3 10 11 12 13 20 21 22 23 24 30 40 41 50 60 70 80 }"
+--test_set "{ }"
 # Default: { 0 ... 9999 }
 
 # Subset of testcase indices to use for test sets
 # --test_set { 0 1 ... 9 }
+--training_set "{ }"
 # Default: { 0 ... 9999 }
 
 # Testcase index
@@ -290,7 +292,7 @@
 # --strategy (none|hold_out|formal|extension)
 # Default: none
 #--strategy hold_out
---strategy "hold_out"
+--strategy "bounded"
 --bound 2
 --alias_strategy "string_antialias"
 
