update to new cmd line interface

--- a/examples/bansal/synth.conf
+++ b/examples/bansal/synth.conf
@@ -20,10 +20,10 @@
 --reduction sum # Method for summing errors across testcases
 --sig_penalty 9999 # Score to assign to rewrites that produce non-zero signals
 
---perf none # Measure performance by summing instruction latencies
+--cost "correctness"
 
 --cpu_flags "{ popcnt cmov abm bmi1 bmi2 }" # cpuid flags to use when proposing instructions
---opc_blacklist "{ push pop }"
+--opc_blacklist "{ push.* popq.* }"
 
 --global_swap_mass 0 # Proposal mass
 --instruction_mass 1 # Proposal mass
