--- a/examples/bansal/opt.conf
+++ b/examples/bansal/opt.conf
@@ -4,9 +4,7 @@
 
 --target kernel.s # Path to the function to optimize
 --init previous # Begin search from synthesis result
---current synth_result.s
---best_yet synth_result.s
---best_correct kernel.s
+--previous synth_result.s
 
 --def_in "{ %rsp }" # The registers that are defined on entry to the target
 --live_out "{ }" # The registers that are live on exit from the target
@@ -22,12 +20,11 @@
 --misalign_penalty 1 # Penalty for results that appear in the wrong location
 --reduction sum # Method for summing errors across testcases
 --sig_penalty 9999 # Score to assign to rewrites that produce non-zero signals
--k 100
 
---perf latency # Measure performance by summing instruction latencies
+--cost "correctness+latency" # Measure performance by summing instruction latencies
 
 --cpu_flags "{ popcnt cmov abm bmi1 bmi2 }" # cpuid flags to use when proposing instructions
---opc_blacklist "{ push pop }"
+--opc_blacklist "{ push.* pop.* }"
 
 --global_swap_mass 1 # Proposal mass
 --instruction_mass 1 # Proposal mass
@@ -40,8 +37,7 @@
 --initial_instruction_number 32 # The maximum number of instruction allowed in a rewrite
 
 --statistics_interval 1000000 # Print statistics every 1m proposals
---timeout 1000000 # Propose 1m modifications before giving up
---timeout_action testcase # Try adding a new testcase from the testset when search times out
---timeout_cycles 16 # Timeout up to 16 times before giving up
+--timeout_iterations 16000000 # Propose 1m modifications before giving up
+--cycle_timeout 1000000 # Timeout up to 16 times before giving up
 
 --strategy hold_out # Verify results using a larger hold out testcase set
