tweak bansal config a bit to make it faster

--- a/examples/bansal/synth.conf
+++ b/examples/bansal/synth.conf
@@ -36,7 +36,7 @@
 --initial_instruction_number 16 # The maximum number of instruction allowed in a rewrite
 
 --statistics_interval 1000000 # Print statistics every 1m proposals
---timeout_iterations 800000000
---cycle_timeout 50000000
+--timeout_iterations 2000000
+--cycle_timeout 300000
 
 --strategy hold_out # Verify results using a larger hold out testcase set
