--- a/examples/parity/search.conf
+++ b/examples/parity/search.conf
@@ -33,6 +33,6 @@
 --timeout_iterations 12800000
 --cycle_timeout 400000
 
---strategy formal # Verify results using a larger hold out testcase set
+--strategy bounded # Verify results with bounded validator
 --testcases parity.tc
 --training_set "{ 1 .. 16 }"
