--- a/examples/nacl_shootout/good/2015.10.02.results/wcpcpy/Makefile
+++ b/examples/nacl_shootout/good/2015.10.02.results/wcpcpy/Makefile
@@ -19,7 +19,7 @@ synth_notc:
 	time stoke debug verify --target target.s --rewrite synth.s --strategy ddec --def_in $(DEF_IN) --live_out $(LIVE_OUT) $(ARGS)
 
 bounded_flat:
-	./bounded_flat.sh $(DEF_IN) $(LIVE_OUT) string 2
+	./bounded_flat.sh $(DEF_IN) $(LIVE_OUT) flat 2
 
 bounded_flat_syn:
 	./bounded_flat_syn.sh $(DEF_IN) $(LIVE_OUT) flat 2
