updating makefiles; debugging

--- a/examples/nacl_shootout/good/2015.10.02.results/wcscat/Makefile
+++ b/examples/nacl_shootout/good/2015.10.02.results/wcscat/Makefile
@@ -1,7 +1,7 @@
 
 DEF_IN="{ %r15 %rdi %rsi %rdx %rax }"
 LIVE_OUT="{ %rax }"
-ARGS=--solver z3 --alias_strategy string_antialias --test_set "{ 0 .. 100 }" --sound_nullspace
+ARGS=--solver z3 --alias_strategy string_antialias --test_set "{ 0 .. 100 }" --sound_nullspace --verify_nacl
 
 opt:
 	time stoke debug verify --target target.s --rewrite optimize.s --testcases testcases --strategy ddec --def_in $(DEF_IN) --live_out $(LIVE_OUT) $(ARGS)
