--- a/examples/nacl_shootout/good/2015.10.02.results/wcsrchr/Makefile
+++ b/examples/nacl_shootout/good/2015.10.02.results/wcsrchr/Makefile
@@ -2,17 +2,19 @@
 DEF_IN="{ %r15 %rdi %rsi }"
 LIVE_OUT="{ %rax }"
 
+ARGS=--verify_nacl --test_set "{ 0 .. 20 }" --sound_nullspace --no_ddec_bv
+
 opt:
-	time stoke debug verify --target target.s --rewrite optimize.s --testcases testcases --strategy ddec --def_in $(DEF_IN) --live_out $(LIVE_OUT)
+	time stoke debug verify --target target.s --rewrite optimize.s --testcases testcases --strategy ddec --def_in $(DEF_IN) --live_out $(LIVE_OUT) $(ARGS)
 
 synth:
-	time stoke debug verify --target target.s --rewrite synth.s --testcases testcases --strategy ddec --def_in $(DEF_IN) --live_out $(LIVE_OUT)
+	time stoke debug verify --target target.s --rewrite synth.s --testcases testcases --strategy ddec --def_in $(DEF_IN) --live_out $(LIVE_OUT) $(ARGS)
 
 opt_notc:
-	time stoke debug verify --target target.s --rewrite optimize.s --strategy ddec --def_in $(DEF_IN) --live_out $(LIVE_OUT)
+	time stoke debug verify --target target.s --rewrite optimize.s --strategy ddec --def_in $(DEF_IN) --live_out $(LIVE_OUT) $(ARGS)
 
 synth_notc:
-	time stoke debug verify --target target.s --rewrite synth.s --strategy ddec --def_in $(DEF_IN) --live_out $(LIVE_OUT)
+	time stoke debug verify --target target.s --rewrite synth.s --strategy ddec --def_in $(DEF_IN) --live_out $(LIVE_OUT) $(ARGS)
 
 bounded_flat:
 	./bounded_flat.sh $(DEF_IN) $(LIVE_OUT)
