--- a/examples/nacl_shootout/good/2015.10.02.results/wmemchr/Makefile
+++ b/examples/nacl_shootout/good/2015.10.02.results/wmemchr/Makefile
@@ -1,7 +1,7 @@
 
 DEF_IN="{ %r15 %rdi %rsi %rdx }"
 LIVE_OUT="{ %rax }"
-ARGS=--solver z3 --sound_nullspace --no_ddec_bv --test_set "{ 0 .. 80 }" --verify_nacl
+ARGS=--solver z3 --sound_nullspace --no_try_sign_extend --no_ddec_bv --test_set "{ 0 .. 80 }" --verify_nacl
 
 opt:
 	time stoke debug verify --target target.s --rewrite optimize.s --testcases testcases --strategy ddec --def_in $(DEF_IN) --live_out $(LIVE_OUT) $(ARGS)
