--- a/examples/nacl_shootout/good/2015.10.02.results/wcslen/Makefile
+++ b/examples/nacl_shootout/good/2015.10.02.results/wcslen/Makefile
@@ -1,7 +1,7 @@
 
 DEF_IN="{ %r15 %rdi }"
 LIVE_OUT="{ %rax }"
-ARGS=--solver z3 --no_ddec_bv --test_set "{ 0 .. 20 }" --alias_strategy string --sound_nullspace --verify_nacl
+ARGS=--solver z3 --no_ddec_bv --test_set "{ 0 .. 20 }" --alias_strategy flat --sound_nullspace --verify_nacl
 
 opt:
 	time stoke debug verify --target target.s --rewrite optimize.s --testcases testcases --strategy ddec --def_in $(DEF_IN) --live_out $(LIVE_OUT) $(ARGS)
