--- a/examples/nacl_shootout/good/2015.10.02.results/wcsrchr/Makefile
+++ b/examples/nacl_shootout/good/2015.10.02.results/wcsrchr/Makefile
@@ -2,13 +2,16 @@
 DEF_IN="{ %r15 %rdi %rsi }"
 LIVE_OUT="{ %rax }"
 
-ARGS=--verify_nacl --test_set "{ 90 .. 110 }" --sound_nullspace --no_ddec_bv
+ARGS=--verify_nacl --test_set "{ 90 100 110 120 130 140 150 160 170 180 190 200 210 220 230 240 250 260 270 280 290 300 }" --sound_nullspace
 
 opt:
 	time stoke debug verify --target target.s --rewrite optimize.s --testcases testcases --strategy ddec --def_in $(DEF_IN) --live_out $(LIVE_OUT) $(ARGS)
 
 synth:
 	time stoke debug verify --target target.s --rewrite synth.s --testcases testcases --strategy ddec --def_in $(DEF_IN) --live_out $(LIVE_OUT) $(ARGS)
+
+self:
+	time stoke debug verify --target target.s --rewrite target.s --testcases testcases --strategy ddec --def_in $(DEF_IN) --live_out $(LIVE_OUT) $(ARGS)
 
 opt_notc:
 	time stoke debug verify --target target.s --rewrite optimize.s --strategy ddec --def_in $(DEF_IN) --live_out $(LIVE_OUT) $(ARGS)
