better testcases for cell memory

--- a/examples/nacl_shootout/good/2015.10.02.results/strxfrm/Makefile
+++ b/examples/nacl_shootout/good/2015.10.02.results/strxfrm/Makefile
@@ -1,7 +1,7 @@
 
 DEF_IN="{ %r15 %rdi %rsi %rdx }"
 LIVE_OUT="{ %rax }"
-ARGS=--solver z3 --sound_nullspace --test_set "{ 0 .. 50 }" --verify_nacl --alias_strategy flat
+ARGS=--solver z3 --sound_nullspace --test_set "{ 0 .. 50 }" --verify_nacl --alias_strategy string --bound 2
 
 opt:
 	time stoke debug verify --target target.s --rewrite optimize.s --testcases testcases --strategy ddec --def_in $(DEF_IN) --live_out $(LIVE_OUT) $(ARGS)
