--- a/examples/nacl_shootout/oopsla/wcpcpy/search.conf
+++ b/examples/nacl_shootout/oopsla/wcpcpy/search.conf
@@ -5,11 +5,10 @@
 
 ## Search
 --cycle_timeout 500000
---timeout_iterations 5000000 1
+--timeout_iterations 10000000
 --timeout_seconds 0
 --init target
 --target target.s
---init target
 
 ## Cost
 --restricted_reg_penalty 100
@@ -30,7 +29,7 @@
 --opc_blacklist "{ prefetch* cmc stc clc lfence leaveq mfence sfence cbtw clt* cld crc32* cwt* pause imul* emms set* cmpxchg* adc* sbb* xchg* idiv* xadd* rol* rcl* ror* rcr* bswap div* ver* bsr* bsf* mul* btr* bts* bt* cmp* test* j* ud2 cqt* shrd* }"
 --opc_whitelist "{ }"
 --validator_must_support
---preserve_regs "{ %r15 %xmm0 %xmm1 %xmm2 %xmm3 %xmm4 %xmm5 %xmm6 %xmm7 %xmm8 %xmm9 %xmm10 %xmm11 %xmm12 %xmm13 %xmm14 %xmm15 { %rbx %rsp %rbp %r12 %r13 %r14 } }"
+--preserve_regs "{ %r15 %xmm0 %xmm1 %xmm2 %xmm3 %xmm4 %xmm5 %xmm6 %xmm7 %xmm8 %xmm9 %xmm10 %xmm11 %xmm12 %xmm13 %xmm14 %xmm15 %rbx %rsp %rbp %r12 %r13 %r14 }"
 --mem_ops "{ 0x0(%r15,%rsi) 0x0(%r15,%rdi) 0x4(%r15,%rsi) 0x4(%r15,%rdi) -0x4(%r15,%rsi) -0x4(%r15,%rdi) }"
 
 ## Verification
