--- a/examples/nacl_shootout/oopsla/wcpcpy/search.conf
+++ b/examples/nacl_shootout/oopsla/wcpcpy/search.conf
@@ -4,11 +4,12 @@
 --opcode_width_mass 1
 
 ## Search
---cycle_timeout 200000
---timeout_iterations 4000000
+--cycle_timeout 200
+--timeout_iterations 800
 --timeout_seconds 0
 --init target
 --target target.s
+#--verify_all
 
 ## Cost
 --restricted_reg_penalty 100
@@ -39,6 +40,6 @@
 
 ## Miscelaneous
 --out result.s
---statistics_interval 25000
+--statistics_interval 50
 --postprocessing nacl
 
