more work on jobmaster

--- a/examples/nacl_shootout/oopsla/wcpcpy/search.conf
+++ b/examples/nacl_shootout/oopsla/wcpcpy/search.conf
@@ -4,8 +4,8 @@
 --opcode_width_mass 1
 
 ## Search
---cycle_timeout 200000
---timeout_iterations 4000000
+--cycle_timeout 4000
+--timeout_iterations 16000
 --timeout_seconds 0
 --init target
 --target target.s
@@ -40,6 +40,7 @@
 
 ## Miscelaneous
 --out result.s
---statistics_interval 25000
+--folder_name results/wcpcpy/testing/search--statistics_interval 25000
 --postprocessing nacl
+--machine_output results/wcpcpy/testing/search/search_stats
 
