stoke synthesize and optimize

--- a/examples/tutorial/Makefile
+++ b/examples/tutorial/Makefile
@@ -12,7 +12,7 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-all: orig extract testcase search replace
+all: orig extract testcase synthesize replace
 
 orig:
 	g++ -std=c++11 -fno-inline -O3 main.cc
@@ -26,11 +26,11 @@ extract:
 testcase:
 	stoke testcase --config testcase.conf
 
-search:
-	stoke search --config search.conf
+synthesize:
+	stoke synthesize --config synthesize.conf
 
 # 'make check' should always work unless there's
-# a bug in 'stoke debug verify' or 'stoke search'
+# a bug in 'stoke debug verify' or 'stoke synthesize'
 # or the search just fails.
 check:
 	stoke debug verify --config verify.conf
