lists of functions

--- a/examples/tutorial/testcase.conf
+++ b/examples/tutorial/testcase.conf
@@ -1,7 +1,6 @@
 ##### stoke testcase config file
 
-#--bin ./a.out
---bin ./testit.sh # The name of the binary to use to generate testcases 
+--bin ./a.out # The name of the binary to use to generate testcases 
 --args 10000000 # Command line arguments that should be passed to ./a.out
 --functions bins # Disassembly directory created by stoke extract
 
