--- a/examples/tutorial/testcase.conf
+++ b/examples/tutorial/testcase.conf
@@ -6,5 +6,7 @@
 
 -o popcnt.tc # Path to file to write testcases to
 
---fxn _Z6popcntm # The name of the function to generate testcases for
+--fxn foobar # The name of the function to generate testcases for
+--function_list list
 --max_testcases 1024 # The maximum number of testcases to generate. 
+--output_dir tcs
