--- a/examples/tutorial/testcase.conf
+++ b/examples/tutorial/testcase.conf
@@ -1,12 +1,11 @@
 ##### stoke testcase config file
 
---bin ./a.out # The name of the binary to use to generate testcases 
+--bin ./test.sh # The name of the binary to use to generate testcases 
 --args 10000000 # Command line arguments that should be passed to ./a.out
 --functions bins # Disassembly directory created by stoke extract
 
 -o popcnt.tc # Path to file to write testcases to
 
---fxn foobar # The name of the function to generate testcases for
---function_list list
+--fxn _Z6popcntm # The name of the function to generate testcases for
 --max_testcases 1024 # The maximum number of testcases to generate. 
 --output_dir tcs
