--- a/examples/tutorial/verify.conf
+++ b/examples/tutorial/verify.conf
@@ -141,7 +141,7 @@
 
 # Testcases
 # --testcases <path/to/file>
---testcases popcnt.tc
+--testcases tcs/_Z6popcntm
 
 # Shuffle testcase ordering
 # --shuffle_testcases 
