--- a/src/ext/pin-2.13-62732-gcc.4.4.7-linux/source/tools/stoke/Makefile
+++ b/src/ext/pin-2.13-62732-gcc.4.4.7-linux/source/tools/stoke/Makefile
@@ -29,7 +29,7 @@ PIN_DEF=\
 	-DHOST_IA32E \
 	-DTARGET_LINUX  
 
-PIN_CC=g++ -std=c++11 -fPIC $(TARGET)
+PIN_CC=g++-4.9 -std=c++11 -fPIC $(TARGET)
 
 PIN_OPT=-O3
 
