implementing exponential backoff

--- a/popl19/TSVC/Makefile
+++ b/popl19/TSVC/Makefile
@@ -20,6 +20,21 @@ pdfs: .force
 
 tcgen:
 	tcgen_tsvc --num_testcases 8 > testcases/8
+	# quad
+	tcgen_tsvc --num_testcases 8 > testcases/8quad
+	tcgen_tsvc --num_testcases 8 >> testcases/8quad
+	tcgen_tsvc --num_testcases 8 >> testcases/8quad
+	tcgen_tsvc --num_testcases 8 >> testcases/8quad
+	# 96
+	tcgen_tsvc --num_testcases 8 > testcases/96
+	tcgen_tsvc --num_testcases 8 >> testcases/96
+	tcgen_tsvc --num_testcases 8 >> testcases/96
+	tcgen_tsvc --num_testcases 8 >> testcases/96
+	tcgen_tsvc --num_testcases 16 >> testcases/96
+	tcgen_tsvc --num_testcases 16 >> testcases/96
+	tcgen_tsvc --num_testcases 16 >> testcases/96
+	tcgen_tsvc --num_testcases 16 >> testcases/96
+	# sixteen
 	tcgen_tsvc --num_testcases 16 > testcases/16
 
 clean:
