--- a/examples/tutorial/verify.conf
+++ b/examples/tutorial/verify.conf
@@ -165,7 +165,8 @@
 # Verification strategy
 # --strategy (none|hold_out|formal|extension)
 # Default: none
---strategy hold_out
+--strategy bounded
+--bound 8
 
 ##### Diff Options:
 
