various fixes/changes + HUGE BUG FIX FOR ARM

--- a/pldi19/strlen/Makefile
+++ b/pldi19/strlen/Makefile
@@ -11,9 +11,9 @@ all:
 	stoke debug cfg --target $(REWRITE) -o $(NAME)_vec.pdf
 
 tcgen:
-	stoke_tcgen --target $(TARGET) --bound 4 --def_in "$(DEF_INS)" --live_out "$(LIVE_OUTS)" --output tcs/tcgen1 --mutants 4
-	stoke_tcgen --target $(REWRITE) --bound 4 --def_in "$(DEF_INS)" --live_out "$(LIVE_OUTS)" --output tcs/tcgen2 --mutants 4
-	cat tcs/tcgen1 tcs/tcgen2 > tcs/testcases.combo
+	stoke_tcgen --target $(TARGET) --bound 4 --def_in $(DEF_INS) --live_out $(LIVE_OUTS) --output tcs/tcgen1 --mutants 4 --randomize_order
+	stoke_tcgen --target $(REWRITE) --bound 4 --def_in $(DEF_INS) --live_out $(LIVE_OUTS) --output tcs/tcgen2 --mutants 4 --randomize_order
+	cat tcs/tcgen2 tcs/tcgen1 > tcs/testcases.combo
 
 clean:
 	rm -rf opt1* opt3* *.pdf sage* stoke_sage* state* *.tmp
