--- a/pldi19/TSVC/Makefile
+++ b/pldi19/TSVC/Makefile
@@ -79,3 +79,5 @@ clean:
 plots:
 	gnuplot search.gnuplot
 	gnuplot performance.gnuplot
+	gnuplot search-gcc.gnuplot
+	gnuplot performance-gcc.gnuplot
