stopping as soon as we have a proof

--- a/pldi19/strlen/Makefile
+++ b/pldi19/strlen/Makefile
@@ -2,11 +2,11 @@
 include variables
 
 all:
-	gcc -O1 -std=c99 source.c -c -o opt1.o
-	gcc -O1 -std=c99 source.c -o opt1bin
-	gcc -O3 -std=c99 source.c -c -o opt3.o
-	stoke extract -i opt1.o -o opt1
-	stoke extract -i opt3.o -o opt3
+#gcc -O1 -std=c99 source.c -c -o opt1.o
+#gcc -O1 -std=c99 source.c -o opt1bin
+#gcc -O3 -std=c99 source.c -c -o opt3.o
+#stoke extract -i opt1.o -o opt1
+#stoke extract -i opt3.o -o opt3
 	stoke debug cfg --target $(TARGET) -o $(NAME).pdf
 	stoke debug cfg --target $(REWRITE) -o $(NAME)_vec.pdf
 
