about to run some more experiments

--- a/pldi19/strlen/Makefile
+++ b/pldi19/strlen/Makefile
@@ -5,6 +5,8 @@ all:
 	gcc -O1 -std=c99 source.c -c -o opt1.o
 	gcc -O1 -std=c99 source.c -o opt1bin
 	gcc -O3 -std=c99 source.c -c -o opt3.o
+	gcc -O3 -std=c99 -DBENCHMARK_F1 source.c -o benchmark_glibc
+	gcc -O3 -std=c99 -DBENCHMARK_F3 source.c -o benchmark_ours
 	stoke extract -i opt1.o -o opt1
 	stoke extract -i opt3.o -o opt3
 	stoke debug cfg --target $(TARGET) -o $(NAME).pdf
