crazy attempt to help travis finish in time: precompile z3

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -7,6 +7,9 @@ EXPOSE 22
 ENV NOTVISIBLE "in users profile"
 RUN useradd -ms /bin/bash -ms /bin/bash stoke
 
+# shortcut for Z3
+COPY libz3.so /home/stoke
+
 # Build everything 
 COPY setup.sh user-setup.sh /home/stoke/
 RUN chmod +x /home/stoke/setup.sh && \
