--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ services:
   - docker
 
 before_install:
-  - docker build -t bchurchill/stoke docker
+  - docker build -t bchurchill/stoke .
 
 script:
   - docker run bchurchill/stoke /bin/sh -c "cd /home/stoke; make test;"
