--- a/Dockerfile.base
+++ b/Dockerfile.base
@@ -1,6 +1,5 @@
 FROM ubuntu:14.04
 MAINTAINER Berkeley Churchill (berkeley@cs.stanford.edu)
-ARG TRAVIS=0
 
 # SSH setup
 CMD ["/usr/sbin/sshd", "-D"]
@@ -9,8 +8,6 @@ ENV NOTVISIBLE "in users profile"
 RUN useradd -ms /bin/bash -ms /bin/bash stoke
 
 # Build everything 
-COPY src/ext/ /home/stoke/misc/src/ext
-COPY src/Makefile /home/stoke/misc
-COPY docker /home/stoke/misc/docker
-RUN chmod +x /home/stoke/misc/base-setup.sh && \
-    TRAVIS=$TRAVIS /home/stoke/misc/base-setup.sh
+COPY . /home/stoke/base/
+RUN chmod +x /home/stoke/base/docker/base-setup.sh && \
+    TRAVIS=$TRAVIS /home/stoke/base/docker/base-setup.sh
