--- a/.travis.yml
+++ b/.travis.yml
@@ -1,23 +1,15 @@
 
-language: generic
+language: minimal
 
 services:
   - docker
 
-stages:
-  - compile
-  - test
-
-env:
-  - IMAGENAME: "stanfordpl/stoke-test:$TRAVIS_BUILD_ID"
-
-jobs:
-  include:
-    - stage: test
-      script: 
-        - echo "$DOCKER_DEPLOY_PWD" | docker login -u "$DOCKER_DEPLOY_USR" --password-stdin
-        - docker build -t stoke .
-        - docker run stoke /bin/sh -c "cd /home/stoke/stoke; make test;"
-        - docker tag stoke "$IMAGENAME"
-        - docker push "$IMAGENAME"
+script: 
+  - echo "$DOCKER_DEPLOY_PWD" | docker login -u "$DOCKER_DEPLOY_USR" --password-stdin
+  - docker build -t stoke .
+  - docker run stoke /bin/sh -c "cd /home/stoke/stoke; make test;"
+  - IMAGENAME="stanfordpl/stoke-test:$TRAVIS_BUILD_ID"
+  - if [ "$TRAVIS_BRANCH" = "develop" ]; then IMAGENAME="stanfordpl/stoke:latest"; fi
+  - docker tag stoke "$IMAGENAME"
+  - docker push "$IMAGENAME"
 
