--- a/.travis.yml
+++ b/.travis.yml
@@ -5,11 +5,13 @@ services:
   - docker
 
 script: 
-  - echo "$DOCKER_DEPLOY_PWD" | docker login -u "$DOCKER_DEPLOY_USR" --password-stdin
   - docker build -t stoke .
   - docker run stoke /bin/sh -c "cd /home/stoke/stoke; ./configure.sh; make; make test;"
   - IMAGENAME="stanfordpl/stoke-test:$TRAVIS_BUILD_ID"
   - if [ "$TRAVIS_BRANCH" = "develop" ]; then IMAGENAME="stanfordpl/stoke:latest"; fi
-  - docker tag stoke "$IMAGENAME"
-  - docker push "$IMAGENAME"
+  - if [ "$TRAVIS_PULL_REQUEST" = "false" ]; then 
+        docker tag stoke "$IMAGENAME";  
+        docker push "$IMAGENAME";
+        echo "$DOCKER_DEPLOY_PWD" | docker login -u "$DOCKER_DEPLOY_USR" --password-stdin;
+    fi
 
